# keystone-adm

./: .gitignore  LICENSE  README.md  flake.nix
apps/: .clang-format  .envrc
apps/admtest/: package.nix
apps/admtest/eapp/: CMakeLists.txt  admtest.c
apps/admtest/host/: CMakeLists.txt  host.cpp
apps/hello/: package.nix
apps/hello-native/: package.nix
apps/hello-native/eapp/: CMakeLists.txt  hello.c
apps/hello-native/host/: CMakeLists.txt  host.cpp
apps/hello/eapp/: CMakeLists.txt
apps/hello/host/: CMakeLists.txt  host.cpp
apps/hello/host-adm/: CMakeLists.txt  host.cpp
apps/iotest/: package.nix
apps/iotest-adm/: package.nix
apps/iotest-adm-nocpy/: package.nix
apps/iotest-adm-nocpy/eapp/: CMakeLists.txt  iotest.c
apps/iotest-adm-nocpy/host/: CMakeLists.txt  host.cpp
apps/iotest-adm/eapp/: CMakeLists.txt  iotest.c
apps/iotest-adm/host/: CMakeLists.txt
apps/iotest/eapp/: CMakeLists.txt  iotest.c
apps/iotest/host/: CMakeLists.txt  host.cpp
benchmarks/cswitch/: package.nix
benchmarks/cswitch/eapp/: CMakeLists.txt  eapp.c
benchmarks/cswitch/host/: CMakeLists.txt  host.cpp
benchmarks/iozone/: README.md  package.nix
benchmarks/iozone/host/: CMakeLists.txt  adm.cpp  ecall.cpp
benchmarks/iozone/src/: .gitignore  Makefile  iozone.c  makefile.orig
benchmarks/transfer/: package.nix
benchmarks/transfer/adm/: package.nix
benchmarks/transfer/ecall/: package.nix
benchmarks/transfer/ecall/eapp/: CMakeLists.txt  main.c
benchmarks/transfer/ecall/host/: CMakeLists.txt  main.cpp
bootloader/: .clang-format
bootloader/bootrom/: .envrc  Makefile  bootloader.c  string.h  test_dev_key.h
bootloader/u-boot/configs/: sifive_unmatched_keystone_defconfig
crypto/ed25519/: fixedint.h
crypto/sha3/: sha3.h
driver/: .clang-format  .envrc  .gitignore  LICENSE  Makefile  Makefile.dkms  README.md  adm.h  dkms.conf  keystone-enclave.c  keystone-ioctl.c  keystone-page.c  keystone-sbi.c  keystone-sbi.h  keystone.c  keystone.h  keystone_user.h  riscv64.h
nix/nixos/: common.nix  default.nix
nix/nixos/unmatched/: configurations.nix
nix/nixos/virt/: configurations.nix
nix/patches/qemu/: qemu-bootrom.patch
nix/patches/u-boot/: 0005-fu740-pmu.patch  fix-implicit-declaration.patch
nix/pkgs/: bootrom.nix  default.nix  driver.nix  keystone-sm.nix  qemu.nix  riscv-overlay.nix  runtime.nix  sdk.nix
nix/pkgs/apps/: default.nix
nix/pkgs/benchmarks/: default.nix
nix/pkgs/bootrom/: default.nix
nix/pkgs/build-support/: mk-keystone-pkg.nix
nix/pkgs/driver/: default.nix
nix/pkgs/keystone-sm/: default.nix
nix/pkgs/meta-sifive/: default.nix
nix/pkgs/qemu/: default.nix
nix/pkgs/run-virt/: default.nix
nix/pkgs/runtime/: default.nix
nix/pkgs/sdk/: default.nix
nix/pkgs/u-boot/: default.nix
nix/pkgs/unmatched-sd-image/: default.nix
nix/shells/: default.nix  runtime.nix
nix/shells/apps/: default.nix
nix/shells/benchmarks/: default.nix
nix/shells/bootrom/: default.nix
nix/shells/driver/: default.nix
nix/shells/keystone-sm/: default.nix
nix/shells/runtime/: default.nix
nix/shells/sdk/: default.nix
runtime/: .envrc  .gitignore  CMakeLists.txt
runtime/call/: io_wrap.c  linux_wrap.c  net_wrap.c  sbi.c  syscall.c
runtime/crypto/: merkle.c
runtime/include/call/: io_wrap.h  linux_wrap.h  net_wrap.h  sbi.h  syscall.h  syscall_nums.h
runtime/include/loader/: elf.h  elf32.h  elf64.h  loader.h
runtime/include/mm/: common.h  freemem.h  mm.h  page_swap.h  paging.h  vm.h  vm_defs.h
runtime/include/sys/: auxvec.h  env.h  interrupt.h  timex.h
runtime/include/util/: asm_helpers.h  elf.h  printf.h  regs.h  rt_elf.h  rt_util.h  string.h
runtime/loader/: elf.c  elf32.c  elf64.c  loader.c
runtime/loader-binary/: CMakeLists.txt  loader-binary.c  loader.S
runtime/mm/: freemem.c  freemem_ld.c  mm.c  page_swap.c  paging.c  vm.c
runtime/sys/: CMakeLists.txt  boot.c  entry.S  env.c  interrupt.c
runtime/tmplib/: partial_linkage.h  uaccess.h  uio.h
runtime/tmplib/asm/: asm.h  csr.h  linkage.h
runtime/tmplib/linux/: const.h
runtime/util/: printf.c  rt_util.c  string.c
sdk/: .envrc  .gitignore  CMakeLists.txt  README.md  macros.cmake
sdk/include/app/: eapp_utils.h  malloc.h  sealing.h  string.h  syscall.h
sdk/include/edge/: adm.h  adm_alloc.h  adm_err.h  edge_call.h  edge_common.h  edge_syscall.h  syscall_nums.h
sdk/include/host/: AdditionalData.hpp  AdditionalDataMemory.hpp  ElfFile.hpp  Elfloader.hpp  Enclave.hpp  EnclaveBuilder.hpp  Error.hpp  KeystoneDevice.hpp  KeystoneLogs.hpp  Log.hpp  Memory.hpp  Params.hpp  UniqueFd.hpp  adm_types.h  common.h  elf.h  elf32.h  elf64.h  hash_util.hpp  keystone.h  keystone_user.h  sm_err.h
sdk/include/verifier/: Keys.hpp  Report.hpp  test_dev_key.h
sdk/src/: CMakeLists.txt
sdk/src/app/: CMakeLists.txt  errno.c  string.c
sdk/src/app-syscall/: CMakeLists.txt  syscall.c
sdk/src/app-tmalloc/: CMakeLists.txt  tiny-malloc.c
sdk/src/edge/: CMakeLists.txt  adm.c  adm_alloc.c  edge_call.c  edge_dispatch.c  edge_syscall.c
sdk/src/host/: AdditionalData.cpp  AdditionalDataMemory.cpp  CMakeLists.txt  ElfFile.cpp  Enclave.cpp  EnclaveBuilder.cpp  KeystoneDevice.cpp  KeystoneLogs.cpp  Log.cpp  Memory.cpp  PhysicalEnclaveMemory.cpp  SimulatedEnclaveMemory.cpp  UniqueFd.cpp  elf.c  elf32.c  elf64.c  hash_util.cpp
sdk/src/verifier/: Report.cpp
sm/: .clang-format  .envrc
sm/plat/generic/: generic.c
sm/plat/mpfs/: config.h  csr_helper.c  csr_helper.h  encoding.h  hss_clock.c  hss_clock.h  mpfs_reg_map.h  platform.c  uart_helper.c  uart_helper.h
sm/src/: adm.c  adm.h  adm_utils.h  assert.h  attest.c  cpu.c  cpu.h  crypto.c  crypto.h  enclave.c  enclave.h  ipi.c  ipi.h  mprv.h  objects.mk  page.h  platform-hook.h  pmp.c  pmp.h  safe_math_util.h  sbi_trap_hack.c  sm-sbi-opensbi.c  sm-sbi-opensbi.h  sm-sbi.c  sm-sbi.h  sm.c  sm.h  thread.c  thread.h
sm/src/ed25519/: ed25519.h  fe.c  fixedint.h  ge.c  ge.h  keypair.c  precomp_data.h  sc.c  sc.h  sign.c
sm/src/hkdf_sha3_512/: hkdf_sha3_512.c  hkdf_sha3_512.h
sm/src/hmac_sha3/: hmac_sha3.c  (+1 more)
sm/tools/: hash_generator.c
(+31 files in other folders)
